# C_SoftwareSeminar_Practice

./: .gitignore  CMakeLists.txt  README.md  SWSeminar.sln
SWSeminar/: SWSeminar.vcxproj  SWSeminar.vcxproj.filters  [0302]SWSeminar_1.c  [0302]SWSeminar_2.c  [0302]SWSeminar_3.c  [0309_Lab3]exercise1.c  [0309_Lab3]exercise2.c  [0309_Lab3]exercise3.c  [0309_Lab3]exercise5.c  [0309_Lab4]exercise1.c  [0309_Lab4]exercise3.c  [0309_Lab4]exercise4.c  [0309_Lab4]exercise5.c  [0309_Lab4]exercise6.c  [0309_Lab4]exercise7.c  [0316_Lab5]exercise1.c  [0316_Lab5]exercise2.c  [0316_Lab5]exercise3.c  [0316_Lab5]exercise4.c  [0316_Lab5]exercise5.c  [0316_Lab5]exercise6.c  [0316_Lab5]exercise7.c  [0323_Lab6]exercise4.c  [0330_Lab7]Exercise1.c  [0330_Lab7]Exercise2.c  [0330_Lab7]Exercise4.c  [0330_Lab7]Exercise5.c  [0406_Lab7]Exercise2.c  [0413_Lab9]Exercise1.c  [0413_Lab9]Exercise3.c  [0413_Lab9]Exercise4.c  prog1.c  prog2.c  prog3.c
SWSeminar/[0302_Lab2]/: [0302]SWSeminar_2.c  [0302]SWSeminar_3.c  prog1.c  prog2.c  prog3.c
SWSeminar/[0309_Lab3]/: [0309_Lab3]exercise1.c  [0309_Lab3]exercise2.c  [0309_Lab3]exercise3.c  [0309_Lab3]exercise4.c  [0309_Lab3]exercise5.c
SWSeminar/[0309_Lab4]/: [0309_Lab4]exercise2.c  [0309_Lab4]exercise3.c  [0309_Lab4]exercise5.c  [0309_Lab4]exercise7.c
SWSeminar/[0316_Lab5]/: [0316_Lab5]exercise1.c  [0316_Lab5]exercise2.c  [0316_Lab5]exercise3.c  [0316_Lab5]exercise4.c  [0316_Lab5]exercise5.c  [0316_Lab5]exercise6.c  [0316_Lab5]exercise7.c
SWSeminar/[0323_Lab6]/: [0323_Lab6]exercise1.c  [0323_Lab6]exercise2.c  (+2 more)
txtFolder/: BookList.txt  exercise2.txt
(+40 files in other folders)
